Miscellaneous low-risk code cleanup