@@ -28,7 +28,6 @@ import java.io.File;
 import java.io.IOException;
 import java.io.ByteArrayOutputStream;
 import java.io.StringWriter;
-import java.io.OutputStream;
 import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.nio.charset.StandardCharsets;
@@ -245,7 +244,7 @@ public abstract class GitAPITestUpdate {
          */
         File touch(String path, String content) throws IOException {
             File f = file(path);
-            FileUtils.writeStringToFile(f, content, "UTF-8");
+            Files.writeString(f.toPath(), content, StandardCharsets.UTF_8);
             return f;
         }
 
@@ -254,7 +253,7 @@ public abstract class GitAPITestUpdate {
         }
 
         String contentOf(String path) throws IOException {
-            return FileUtils.readFileToString(file(path), "UTF-8");
+            return Files.readString(file(path).toPath(), StandardCharsets.UTF_8);
         }
 
         /* Remember the CliGitAPIImpl for this WorkingArea so that the
@@ -816,14 +815,14 @@ public abstract class GitAPITestUpdate {
 
     private void assertFileContains(File file, String expectedContent) throws IOException {
         assertFileExists(file);
-        final String fileContent = FileUtils.readFileToString(file, "UTF-8");
+        final String fileContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
         final String message = file + " does not contain '" + expectedContent + "', contains '" + fileContent + "'";
         assertTrue(message, fileContent.contains(expectedContent));
     }
 
     private void assertFileContents(File file, String expectedContent) throws IOException {
         assertFileExists(file);
-        final String fileContent = FileUtils.readFileToString(file, "UTF-8");
+        final String fileContent = Files.readString(file.toPath(), StandardCharsets.UTF_8);
         assertEquals(file + " wrong content", expectedContent, fileContent);
     }
 
@@ -1135,7 +1134,7 @@ public abstract class GitAPITestUpdate {
     private Properties parseLsRemote(File file) throws IOException {
         Properties properties = new Properties();
         Pattern pattern = Pattern.compile("([a-f0-9]{40})\\s*(.*)");
-        for (String lineO : FileUtils.readLines(file, StandardCharsets.UTF_8)) {
+        for (String lineO : Files.readAllLines(file.toPath(), StandardCharsets.UTF_8)) {
             String line = lineO.trim();
             Matcher matcher = pattern.matcher(line);
             if (matcher.matches()) {
@@ -1356,9 +1355,8 @@ public abstract class GitAPITestUpdate {
             if (entry.isDirectory()) {
                 entryDestination.mkdirs();
             } else {
-                try (InputStream in = zipFile.getInputStream(entry);
-                        OutputStream out = Files.newOutputStream(entryDestination.toPath())) {
-                    org.apache.commons.io.IOUtils.copy(in, out);
+                try (InputStream in = zipFile.getInputStream(entry)) {
+                    Files.copy(in, entryDestination.toPath());
                 }
             }
         }
